# llm-weather

./: .gitignore  README.md  models.yaml  netlify.toml  prompts.yaml  pyproject.toml
.github/workflows/: weather.yml
netlify/functions/: newsletter-signup.js
runs/2026-04-10T22-17-48/: detail.md  responses.json  summary.md
runs/2026-04-10T22-18-45/: detail.md  responses.json  summary.md
runs/2026-04-10T22-50-33/: detail.md  responses.json  summary.md
runs/2026-04-10T22-56-40/: detail.md  judgments.json  summary.md
runs/2026-04-11T01-41-28/: detail.md  judgments.json  summary.md
runs/2026-04-11T03-05-06/: detail.md  responses.json  summary.md
runs/2026-04-11T05-35-22/: detail.md  judgments.json  summary.md
runs/2026-04-11T10-16-11/: detail.md  summary.md
runs/2026-04-11T13-29-32/: detail.md  judgments.json  responses.json  summary.md
runs/2026-04-11T17-11-10/: detail.md  summary.md
runs/2026-04-11T17-15-45/: detail.md  judgments.json  responses.json  summary.md
runs/2026-04-11T22-12-53/: detail.md  responses.json  summary.md
runs/2026-04-12T01-40-36/: detail.md  judgments.json  summary.md
runs/2026-04-12T05-43-53/: detail.md  summary.md
runs/2026-04-12T10-20-29/: detail.md  judgments.json  summary.md
runs/2026-04-12T13-31-43/: detail.md  judgments.json  summary.md
runs/2026-04-12T17-16-41/: detail.md  responses.json  summary.md
runs/2026-04-12T22-14-18/: detail.md  judgments.json  summary.md  (+1 more)
site/: hugo.toml
tests/: test_cli.py  test_config.py  test_e2e.py  test_hugo.py  test_judge.py  test_report.py  test_runner.py  test_status.py
(+680 files in other folders)
